# diesel-demo

./: .env  Cargo.toml  README.md
migrations/2021-05-20-080825_users/: up.sql
migrations/2021-05-20-080925_animals/: down.sql  up.sql
migrations/2021-05-20-081111_posts/: up.sql
migrations/2021-05-20-081221_comments/: up.sql
src/: db.rs  filters.rs  main.rs  schema.rs
src/handlers/: animal_handler.rs  get_demo_handler.rs  mod.rs
src/models/: animal_model.rs  mod.rs  user_model.rs
